@startuml
' Simplified ERD for GharBazaar - Focus on Relationships

entity users {
  * id : INT <<PK>>
  --
  name : VARCHAR(100)
  email : VARCHAR(100) <<UNIQUE>>
  password : VARCHAR(255)
  role : ENUM
  created_at : DATETIME
}

entity listings {
  * id : INT <<PK>>
  --
  user_id : INT <<FK>>
  title : VARCHAR(255)
  description : TEXT
  property_type : ENUM
  purpose : ENUM
  price : DECIMAL(12,2)
  location : VARCHAR(255)
  area : VARCHAR(100)
  phone_number : VARCHAR(20)
  images : TEXT
  latitude : DECIMAL(10,8)
  longitude : DECIMAL(11,8)
  created_at : DATETIME
}

entity messages {
  * id : INT <<PK>>
  --
  sender_id : INT <<FK>>
  receiver_id : INT <<FK>>
  listing_id : INT <<FK>>
  message : TEXT
  subject : VARCHAR(200)
  is_read : BOOLEAN
  created_at : DATETIME
}

entity comments {
  * id : INT <<PK>>
  --
  listing_id : INT <<FK>>
  user_id : INT <<FK>>
  comment : TEXT
  created_at : DATETIME
}

entity favorites {
  * id : INT <<PK>>
  --
  user_id : INT <<FK>>
  listing_id : INT <<FK>>
  created_at : DATETIME
}

entity reviews {
  * id : INT <<PK>>
  --
  listing_id : INT <<FK>>
  user_id : INT <<FK>>
  rating : TINYINT
  review_text : TEXT
  created_at : DATETIME
  updated_at : DATETIME
}

entity ratings {
  * id : INT <<PK>>
  --
  listing_id : INT <<FK>>
  user_id : INT <<FK>>
  rating : TINYINT
  created_at : DATETIME
}

entity reports {
  * id : INT <<PK>>
  --
  reporter_id : INT <<FK>>
  reported_user_id : INT <<FK>>
  reported_listing_id : INT <<FK>>
  reason : TEXT
  status : ENUM
  created_at : DATETIME
}

entity contact_submissions {
  * id : INT <<PK>>
  --
  name : VARCHAR(100)
  email : VARCHAR(100)
  subject : VARCHAR(200)
  message : TEXT
  status : ENUM
  created_at : DATETIME
  updated_at : DATETIME
}

entity search_logs {
  * id : INT <<PK>>
  --
  user_id : INT <<FK>>
  query : TEXT
  searched_at : DATETIME
}

' Relationships
users ||--o{ listings : creates
users ||--o{ messages : sends
users ||--o{ messages : receives
listings ||--o{ messages : about
users ||--o{ comments : writes
listings ||--o{ comments : has
users ||--o{ favorites : saves
listings ||--o{ favorites : favorited_by
users ||--o{ reviews : writes
listings ||--o{ reviews : has
users ||--o{ ratings : gives
listings ||--o{ ratings : receives
users ||--o{ reports : reports
users ||--o{ reports : reported
listings ||--o{ reports : reported
users ||--o{ search_logs : performs

@enduml
